[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "based-uno-web-app-backend"
version = "0.1.0"
description = "Simple FastAPI web app with WebSockets"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = ["fastapi[standard]", "uvicorn[standard]"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
app = "main:app"
dev = "uvicorn src.main:app --reload"


[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
] # Common rules: pycodestyle, pyflakes, isort, pyupgrade
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]
